--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .card{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: aqua;
+    background-color: rgb(0, 255, 208);
     width: 500px;
     border-radius: 14px;
     /* padding: 40px; */
@@ -14,16 +14,10 @@
     font-size: 18px;
     border-radius: 50px;
 }
-/* .card-2{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    width: 500px;
-    border-radius: 14px;
-    border: 1px solid lightgray;
+.heading{
+    width: 50%;
+}
 
-    padding: 40px;
-    margin: 10px auto;
-} */
 .card-2{
    
     border: 1px solid lightgray;
@@ -83,6 +77,7 @@
     padding: 12px 30px;
     font-size: 25px;
     color: rgb(0, 183, 255);
+    border-radius: 10px;
 }
 
 
