--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@
     width: 500px;
     border-radius: 14px;
     /* padding: 40px; */
-    padding: 100px 30px 100px 30px;
+    padding: 100px 30px 100px 50px;
     margin: 10px auto;
+    font-weight:500;
 }
 .btn{
     background-color: #fff;
     border: none;
     padding: 12px 30px;
     font-size: 18px;
+    font-weight: 600;
     border-radius: 50px;
 }
 .heading{
@@ -21,13 +23,13 @@
 .card-2{
    
     border: 1px solid lightgray;
-    width: 400px;
+    width: 600px;
     border-radius: 14px;
     margin: 30px auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .padding{
-    padding: 20px;
+    padding: 30px;
 }
 .padding p{
     color: rgb(109, 107, 107);
@@ -40,13 +42,14 @@
 .border p{
     color: cornflowerblue;
     font-size: 20px;
+    margin-left: 30px;
 }
 .card-img{
     width: 30%;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
     border-radius: 50%;
-    padding: 30px;
+    padding: 40px;
 }
 
 
@@ -59,6 +62,7 @@
     margin: 30px auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .card-3-img{
     width: 100%;
     border-top-left-radius: 14px;
@@ -110,4 +114,8 @@
 }
 .center{
     text-align: center;
+}
+.btn-4{
+    margin: 5px auto;
+    width: 80%;
 }
