--- a/style.css
+++ b/style.css
@@ -91,9 +91,14 @@
     margin: 160px auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-/* .card-4 h2{
-  font-family:sans-serif
-} */
+.card-4 h1{
+  font-family:sans-serif;
+  font-size:50px;
+}
+.card-4 p{
+    
+    font-size:20px;
+  }
 .input{
     width: 100%;
     margin-bottom: 12px;
