--- a/style.css
+++ b/style.css
@@ -1,126 +1,194 @@
-.card{
+body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(0, 255, 208);
+}
+.assignment{
     width: 500px;
-    border-radius: 14px;
-    /* padding: 40px; */
-    padding: 100px 30px 100px 50px;
     margin: 10px auto;
-    font-weight:500;
-}
-.btn{
-    background-color: #fff;
-    border: none;
-    padding: 12px 30px;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 50px;
-}
-.heading{
-    width: 50%;
 }
 
-.card-2{
-   
+/* card-1 */
+
+.card-1{
+    width: 500px;
     border: 1px solid lightgray;
-    width: 600px;
     border-radius: 14px;
-    margin: 30px auto;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 8px;
+    margin: 10px auto;
+    
 }
-.padding{
-    padding: 30px;
+.card-1-header{
+    width: 100%;
+    position: relative;
+
 }
-.padding p{
-    color: rgb(109, 107, 107);
+.card-1-img{
+    width: 100%;
+    border-radius: 14px;
+}
+.promotion{
+    position: absolute;
+    top:0;
+    /* border: 1px solid lightgray; */
+    color: rgb(233, 226, 217);
+    background-color: rgb(130, 133, 136);
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px;
+}
+.offer{
+    position: absolute;
+    bottom:0;
+    /* border: 1px solid lightgray; */
+    color: rgb(255, 255, 255);
+    background-color: rgb(70, 184, 229);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 5px;
+    margin-bottom: 20px;
     font-size: 20px;
+    font-weight: 500;
 }
-.border{
+.minute{
+    position: absolute;
+    bottom:0;
+    right:0;
+    /* border: 1px solid lightgray; */
+    color: rgb(0, 0, 0);
+    background-color: rgb(176, 178, 180);
+    border-radius: 5px;
+    padding: 5px;
+    margin: 20px;
+    font-size: 20px;
+    font-weight: 400;
+}
+.card-1-border{
     border-top: 1px solid lightgray;
     padding: 0 10px;
-}
-.border p{
-    color: cornflowerblue;
+    color: rgb(156, 157, 157);
     font-size: 20px;
-    margin-left: 30px;
+    font-weight: 400;
 }
-.card-img{
-    width: 30%;
-    border-top-left-radius: 14px;
-    border-top-right-radius: 14px;
-    border-radius: 50%;
-    padding: 40px;
+.card-1 p{
+    color: rgb(156, 157, 157);
+    font-size: 30px;
+    font-weight: 400;
 }
 
-
-/* card -3 */
-.card-3{
+/* assignment -2 */
+.bg-1{
+    position: relative;
+    width: 700px;
+    margin: 60px auto;
    
-    border: 1px solid lightgray;
-    width: 500px;
-    border-radius: 14px;
-    margin: 30px auto;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.card-3-img{
-    width: 100%;
-    border-top-left-radius: 14px;
-    border-top-right-radius: 14px;
-}
-.padding-3{
-    padding: 30px;
-}
-.padding-3 p{
-    color: rgb(109, 107, 107);
-    font-size: 25px;
-}
-.btn-3{
-    background-color: #fff;
-    border: 1px solid lightgray;
-    padding: 12px 30px;
-    font-size: 25px;
-    color: rgb(0, 183, 255);
+.bg-1-img{
+    width: 100%; 
     border-radius: 10px;
 }
-
-
-
-.card-4{
-    width: 400px;
-    margin: 160px auto;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.bg-1-content{
+    position: absolute;
+    bottom: 100px;
+    color: white;
+    text-align: center;
 }
-.card-4 h1{
-  font-family:sans-serif;
-  font-size:50px;
+.btn-light{
+    background-color: #fff;
+    padding: 16px 30px;
+    border: none;
+    border-radius: 50px;
+    font-size: 15px;
+
 }
-.card-4 p{
-    
-    font-size:20px;
-  }
-.input{
+
+
+/* assignment 3 */
+.bg-2{
+    position: relative;
+    width: 800px;
+    margin: 60px auto;
+    justify-content: center;
+    align-items: center;
+   
+   
+}
+.bg-2-img{
+    width: 100%; 
+}
+.bg-2-content{
+    position: absolute;
+    color: white;
+    /* width: 300px;
+    height: 200px; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.bg-2-content p{
+    font-size: 20px;
+    font-weight: 20px;
+}
+.zomato-text{
     width: 100%;
     margin-bottom: 12px;
     padding: 14px;
     box-sizing: border-box;
     border-radius: 12px;
     border: 1px solid lightgray;
-    font-size: 16px;
+   
 }
-.btn-dark{
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 16px;
+
+
+
+
+
+
+
+
+
+
+/* assignment 4 */
+
+.card-4{
+    width: 500px;
+    border: 1px solid lightgray;
+    border-radius: 20px;
+    margin: 10px auto;
+    
+}
+.profile{
     width: 100%;
-    font-size: 16px;
-    border-radius: 50px;
+    margin: 0px auto;
+    position: relative;
 }
-.center{
+.bg-img{
+    width: 100%;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+.user-img{
+    height: 90px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -90px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    border: 3px solid white;
     text-align: center;
 }
-.btn-4{
-    margin: 5px auto;
-    width: 80%;
+.profile-details{
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+   
 }
+.profile-details p{
+    color: #797575;
+    font-size: 20px;
+    font-weight: 10px;
+}
+
+
+
+
