--- a/style.css
+++ b/style.css
@@ -1,192 +1,175 @@
 body{
+    margin: 0px;
+    padding: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.assignment{
-    width: 500px;
-    margin: 10px auto;
+.font{
+    font-size: 15px;
+    font-weight: 20px;
+    color: gray;
+    margin: 2px;
 }
-/* card-1 */
-.card-1{
-    width: 500px;
-    border: 1px solid lightgray;
+.img-icon{
+    height: 20px;
+}
+.img-icon-star{
+    height: 10px;
+}
+
+.container{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 200px;
+
+}
+.logo_color{
+    color: #ff385c;
+}
+.card{
+    width: 300px;
+    /* padding: 10px; */
+    border: 0px solid lightgray;
     border-radius: 14px;
-    padding: 8px;
-    margin: 10px auto;
+    z-index: -1;
+}
+.card-img{
+    width: 100%;
+    border-radius: 14px;
     
 }
-.card-1-header{
-    width: 100%;
+.banner{
     position: relative;
+    margin: 0px;
+    padding: 0px;
+}
+.banner-heart{
+    position: absolute;
+    top: 10px;
+    right:10px;
+}
+.flex{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+}
+.content{
+    margin: 0px;
+    
+}
+.heading{
+    margin: 0px;
+    font-size: 20px;
+    font-weight: 30px;
 
 }
-.card-1-img{
-    width: 100%;
-    border-radius: 14px;
-}
-.promotion{
-    position: absolute;
-    top:0;
-    /* border: 1px solid lightgray; */
-    color: rgb(233, 226, 217);
-    background-color: rgb(130, 133, 136);
-    border-radius: 5px;
-    padding: 5px;
-    margin: 10px;
-}
-.offer{
-    position: absolute;
-    bottom:0;
-    /* border: 1px solid lightgray; */
-    color: rgb(255, 255, 255);
-    background-color: rgb(70, 184, 229);
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding: 5px;
-    margin-bottom: 20px;
-    font-size: 20px;
-    font-weight: 500;
-}
-.minute{
-    position: absolute;
-    bottom:0;
-    right:0;
-    /* border: 1px solid lightgray; */
-    color: rgb(0, 0, 0);
-    background-color: rgb(176, 178, 180);
-    border-radius: 5px;
-    padding: 5px;
-    margin: 20px;
-    font-size: 20px;
-    font-weight: 400;
-}
-.card-1-border{
-    border-top: 1px solid lightgray;
-    padding: 0 10px;
-    color: rgb(156, 157, 157);
-    font-size: 20px;
-    font-weight: 400;
-}
-.card-1 p{
-    color: rgb(156, 157, 157);
-    font-size: 30px;
-    font-weight: 400;
-}
+.show-map{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+    position: fixed;
+    bottom:20px;
 
-/* assignment -2 */
-.bg-1{
-    position: relative;
-    width: 700px;
-    margin: 60px auto;
-   
-}
-.bg-1-img{
-    width: 100%; 
-    border-radius: 10px;
-}
-.bg-1-content{
-    position: absolute;
-    bottom: 100px;
+    background-color: #141313;
     color: white;
-    text-align: center;
-}
-.btn-light{
-    background-color: #fff;
     padding: 16px 30px;
     border: none;
     border-radius: 50px;
     font-size: 15px;
-
 }
 
 
-/* assignment 3 */
-.bg-2{
-    position: relative;
-    width: 800px;
-    margin: 60px auto;
+
+/* navbar */
+.btn-avatar{
+    display: flex;
+    gap: 10px;
     justify-content: center;
-    align-items: center;
-   
-   
-}
-.bg-2-img{
-    width: 100%; 
-}
-.bg-2-content{
-    position: absolute;
-    color: white;
-    /* width: 300px;
-    height: 200px; */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-.bg-2-content p{
-    font-size: 20px;
-    font-weight: 20px;
-}
-.zomato-text{
-    width: 100%;
-    margin-bottom: 12px;
-    padding: 14px;
-    box-sizing: border-box;
-    border-radius: 12px;
+    flex-wrap: wrap;
+  
+    /* color: white; */
+    padding: 16px;
+    /* border: none; */
+    border-radius: 50px;
+    font-size: 15px;
     border: 1px solid lightgray;
-   
+    color: gray;
+    /* z-index: ; */
+} 
+.logo{
+    height: 24px;
 }
-
-
-
-
-
-
-
-
-
-
-/* assignment 4 */
-
-.card-4{
-    width: 500px;
-    border: 1px solid lightgray;
-    border-radius: 20px;
-    margin: 10px auto;
-    
-}
-.profile{
-    width: 100%;
-    margin: 0px auto;
+.navbar{
     position: relative;
-}
-.bg-img{
-    width: 100%;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-}
-.user-img{
-    height: 90px;
-    border-radius: 50%;
-    position: absolute;
-    bottom: -90px;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
-    border: 3px solid white;
-    text-align: center;
-}
-.profile-details{
-    margin: 20px;
-    padding: 20px;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* width: 940px; */
+    margin: auto;
+    background-color: #ffffff;
+    padding: 14px;
+    border-bottom: 1px solid lightgray;
+
+    /* margin: 30px; */
    
+
 }
-.profile-details p{
-    color: #797575;
-    font-size: 20px;
-    font-weight: 10px;
+.nav-bar{
+    margin-top: 0px;
+    position: fixed;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    top: 0px;
+    /* right:10px; */
+    /* left: 10px; */
+    /* background-color: #ed1919; */
+}
+.airbnb{
+    position: absolute;
+    right: 170px;
+    /* float: left; */
+}
+.glob{
+    position: absolute;
+    right: 120px;
+    height: 20px;
 }
 
 
+/* panel */
 
+.pannel{
+    width: 100%;
+    position: fixed;
+    top:79px;
+    background-color: #ffffff;
+    margin: 1px;
+    padding: 30px;
+}
+.list-area{
+display: flex;
+gap: 10px;
+}
+.list-icon{
+    height: 30px;
+    color: gray;
+    padding-right: 50px;
+}
 
+.btn-panel{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #ffffff;
+    /* color: white; */
+    padding: 16px;
+    border: none;
+    border-radius: 15px;
+    font-size: 15px;
+    border: 1px solid lightgray;
+}
